; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gu.c_c_guMtxTrans.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gu.c_c_guMtxTrans.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @c_guMtxTrans(float** %0, float %1, float %2, float %3) #0 {
  %5 = alloca float**, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store float** %0, float*** %5, align 8
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %9 = load float**, float*** %5, align 8
  %10 = getelementptr inbounds float*, float** %9, i64 0
  %11 = load float*, float** %10, align 8
  %12 = getelementptr inbounds float, float* %11, i64 0
  store float 1.000000e+00, float* %12, align 4
  %13 = load float**, float*** %5, align 8
  %14 = getelementptr inbounds float*, float** %13, i64 0
  %15 = load float*, float** %14, align 8
  %16 = getelementptr inbounds float, float* %15, i64 1
  store float 0.000000e+00, float* %16, align 4
  %17 = load float**, float*** %5, align 8
  %18 = getelementptr inbounds float*, float** %17, i64 0
  %19 = load float*, float** %18, align 8
  %20 = getelementptr inbounds float, float* %19, i64 2
  store float 0.000000e+00, float* %20, align 4
  %21 = load float, float* %6, align 4
  %22 = load float**, float*** %5, align 8
  %23 = getelementptr inbounds float*, float** %22, i64 0
  %24 = load float*, float** %23, align 8
  %25 = getelementptr inbounds float, float* %24, i64 3
  store float %21, float* %25, align 4
  %26 = load float**, float*** %5, align 8
  %27 = getelementptr inbounds float*, float** %26, i64 1
  %28 = load float*, float** %27, align 8
  %29 = getelementptr inbounds float, float* %28, i64 0
  store float 0.000000e+00, float* %29, align 4
  %30 = load float**, float*** %5, align 8
  %31 = getelementptr inbounds float*, float** %30, i64 1
  %32 = load float*, float** %31, align 8
  %33 = getelementptr inbounds float, float* %32, i64 1
  store float 1.000000e+00, float* %33, align 4
  %34 = load float**, float*** %5, align 8
  %35 = getelementptr inbounds float*, float** %34, i64 1
  %36 = load float*, float** %35, align 8
  %37 = getelementptr inbounds float, float* %36, i64 2
  store float 0.000000e+00, float* %37, align 4
  %38 = load float, float* %7, align 4
  %39 = load float**, float*** %5, align 8
  %40 = getelementptr inbounds float*, float** %39, i64 1
  %41 = load float*, float** %40, align 8
  %42 = getelementptr inbounds float, float* %41, i64 3
  store float %38, float* %42, align 4
  %43 = load float**, float*** %5, align 8
  %44 = getelementptr inbounds float*, float** %43, i64 2
  %45 = load float*, float** %44, align 8
  %46 = getelementptr inbounds float, float* %45, i64 0
  store float 0.000000e+00, float* %46, align 4
  %47 = load float**, float*** %5, align 8
  %48 = getelementptr inbounds float*, float** %47, i64 2
  %49 = load float*, float** %48, align 8
  %50 = getelementptr inbounds float, float* %49, i64 1
  store float 0.000000e+00, float* %50, align 4
  %51 = load float**, float*** %5, align 8
  %52 = getelementptr inbounds float*, float** %51, i64 2
  %53 = load float*, float** %52, align 8
  %54 = getelementptr inbounds float, float* %53, i64 2
  store float 1.000000e+00, float* %54, align 4
  %55 = load float, float* %8, align 4
  %56 = load float**, float*** %5, align 8
  %57 = getelementptr inbounds float*, float** %56, i64 2
  %58 = load float*, float** %57, align 8
  %59 = getelementptr inbounds float, float* %58, i64 3
  store float %55, float* %59, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
